# lp-visu

./: .gitignore  MANIFEST.in  README.org  ilp_visu_ex.py  lp-visu-basic.py  lp_visu.py  lp_visu_ex.ipynb  lp_visu_ex.py  lp_visu_ex_linprog.py  lp_visu_example.py  lp_visu_notebook.py  pyproject.toml  setup.py
lp-visu/: lp_visu_ex_interactive.py
lp_visu/: __init__.py  ilp_visu_ex.ipynb  ilp_visu_ex.py  lp_visu.py  lp_visu_ex.ipynb  lp_visu_ex.py  lp_visu_ex_interactive.py  lp_visu_notebook.py
